fixed spacing

--- a/src/client/layout/Layout.css
+++ b/src/client/layout/Layout.css
@@ -9,4 +9,5 @@
 
 #mainDisplay {
     padding-left: 0;
+    padding-right: 0;
 }
